--- a/s.yaml
+++ b/s.yaml
@@ -4,6 +4,36 @@ appname: rabbit-server
 rabbit-addr:
   - 0.0.0.0:8111
   - 0.0.0.0:8112
-ping-interval: 30
+#服务端侦听地址
+use-syslog: true
+#是否记录到syslog（linux）
 password: 1234
-status-server: 127.0.0.1:8888 #not implemented
+#服务端客户端相同
+aead-cipher: CHACHA20-IETF-POLY1305
+#默认CHACHA20-IETF-POLY1305，可选AES-128-GCM,AES-192-GCM,AES-256-GCM
+status-server: 127.0.0.1:8891
+#状态服务器侦听地址，可以是username:password@0.0.0.0:8888 这样的形式
+#http://127.0.0.1:8891/config  返回配置信息，
+#http://127.0.0.1:8891/status  返回连接状态信息，
+#JSON格式
+status-acl: 127.0.0.1,192.168.0.0/16
+#状态服务器的IP acl
+
+dial-timeout: 6
+#连接超时
+recv-timeout: 20
+#数据超时
+buffer-timeout: 7
+reconnect-delay: 5
+#重试延迟
+outblock-timeout: 3
+max-retries: 3
+#重试次数
+order-rqueue-size: 32
+#排序队列大小
+squeue-size: 32
+#发送队列大小
+rqueue-size: 32
+#接收队列大小
+recv-buffersize: 32768
+#接收缓存大小
